# shelly-power-exporter

./: .gitignore  AGENTS.md  Dockerfile  README.md  collector.py  config.py  main.py  metrics.py  pyproject.toml  renovate.json5  version.py
.github/workflows/: ci.yml  release.yml
